make the text block encoding reversible
Escape existing backslashes before replacing physical line breaks with "\n",
so that a physical newline ("\n") and the escape sequence "\n" in the source
("\n") produce different tokens and a change between them shows up in the
finer history.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>